--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ section {
   padding-top: 4vh;
   height: 96vh;
   margin: 0 10rem;
+  margin-top: 8rem;
   box-sizing: border-box;
   min-height: fit-content;
 }
@@ -220,7 +221,7 @@ section {
 /* BUTTONS */
 
 .btn-container {
-  display: flex;
+  display: block;
   justify-content: center;
   gap: 1rem;
 }
